# toolset-mcp

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PATH_CONVERTER_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SEARXNG_INTEGRATION.md  TEMPLATE_GUIDE.md  captain-definition  captain-definition-with-volumes  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_server.py  run_server_custom.sh  run_server_windows.bat  test_env_config.py  test_fastmcp_tools.py  test_features.py  test_filesystem.py  test_fs_path_conversion.py  test_path_converter.py  test_search_manager.py  test_searxng.py  test_server_health.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml
deploy/: fix-permissions.sh
deploy/caprover/: DELETION_SAFETY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FILESYSTEM_USAGE.md  README.md  configure-volume.sh  docker-compose-local.yml  docker-compose.yml  setup.sh
deploy/caprover/config/: .env.template
docs/: API.md  CAPROVER_DEPLOYMENT.md  FEATURE_COMPARISON.md  SEARCH_MANAGER_GUIDE.md  TIME_SHORTCUTS.md  path_converter_guide.md
examples/: auth_security_tool.py  custom_feature_example.py  database_example.py  database_tool.py  external_api_example.py  external_api_tool.py  path_converter_env_demo.py
scripts/linux/: cleanup.sh  rebuild.sh  setup_dirs.sh
scripts/windows/: build.bat  build.ps1  install.bat  install.ps1  rebuild.bat  rebuild.ps1  run.bat  setup.bat  setup.ps1
src/remote_mcp/: __init__.py  server.py
src/remote_mcp/features/: __init__.py
src/remote_mcp/features/calculator/: __init__.py  engine.py
src/remote_mcp/features/path_converter/: README.md  __init__.py  engine.py
src/remote_mcp/features/search_manager/: ASR-001-unified-search-architecture.md  README.md  __init__.py  engine.py  engine.py0
src/remote_mcp/features/task_manager/: __init__.py  engine.py
src/remote_mcp/features/text_analyzer/: __init__.py  engine.py
src/remote_mcp/features/time/: __init__.py  engine.py
src/remote_mcp/shared/: __init__.py  base.py  types.py
tests/: test_local.py  test_server.py
